--- a/index.html
+++ b/index.html
@@ -1,14 +1,381 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="english">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>exported project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8" />
+    <meta property="twitter:card" content="summary_large_image" />
+
+    <style data-tag="reset-style-sheet">
+      html {
+        line-height: 1.15;
+      }
+      body {
+        margin: 0;
+      }
+      * {
+        box-sizing: border-box;
+        border-width: 0;
+        border-style: solid;
+      }
+      p,
+      li,
+      ul,
+      pre,
+      div,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      figure,
+      blockquote,
+      figcaption {
+        margin: 0;
+        padding: 0;
+      }
+      button {
+        background-color: transparent;
+      }
+      button,
+      input,
+      optgroup,
+      select,
+      textarea {
+        font-family: inherit;
+        font-size: 100%;
+        line-height: 1.15;
+        margin: 0;
+      }
+      button,
+      select {
+        text-transform: none;
+      }
+      button,
+      [type="button"],
+      [type="reset"],
+      [type="submit"] {
+        -webkit-appearance: button;
+      }
+      button::-moz-focus-inner,
+      [type="button"]::-moz-focus-inner,
+      [type="reset"]::-moz-focus-inner,
+      [type="submit"]::-moz-focus-inner {
+        border-style: none;
+        padding: 0;
+      }
+      button:-moz-focus,
+      [type="button"]:-moz-focus,
+      [type="reset"]:-moz-focus,
+      [type="submit"]:-moz-focus {
+        outline: 1px dotted ButtonText;
+      }
+      a {
+        color: inherit;
+        text-decoration: inherit;
+      }
+      input {
+        padding: 2px 4px;
+      }
+      img {
+        display: block;
+      }
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
+    <style data-tag="default-style-sheet">
+      html {
+        font-family: Inter;
+        font-size: 16px;
+      }
+
+      body {
+        font-weight: 400;
+        font-style: normal;
+        text-decoration: none;
+        text-transform: none;
+        letter-spacing: normal;
+        line-height: 1.15;
+        color: var(--dl-color-gray-black);
+        background-color: var(--dl-color-gray-white);
+      }
+    </style>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700;900&amp;display=swap"
+      data-tag="font"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&amp;display=swap"
+      data-tag="font"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>a</h1>
-    <p>あ</p>
+    <div>
+      <link href="css/index.css" rel="stylesheet" />
+
+      <div class="index-container">
+        <div class="index-index">
+          <div class="index-nav">
+            <div class="index-name">
+              <span class="index-text"><span>Yuma Yamaji</span></span>
+            </div>
+            <div class="index-nav1">
+              <span class="index-text02"><span>Top</span></span>
+              <span class="index-text04"><span>About</span></span>
+              <span class="index-text06"><span>Works</span></span>
+              <span class="index-text08"><span>Contact</span></span>
+            </div>
+          </div>
+          <div class="index-top"></div>
+          <div class="index-about">
+            <div class="index-title">
+              <span class="index-text10"><span>About</span></span>
+              <span class="index-text12"><span>私について</span></span>
+            </div>
+            <img
+              src="public/playground_assets/picture3036-4ypj-200h.png"
+              alt="picture3036"
+              class="index-picture"
+            />
+            <div class="index-about1">
+              <div class="index-profile">
+                <div class="index-title1">
+                  <span class="index-text14"><span>Profile</span></span>
+                  <img
+                    src="public/playground_assets/line3686-qmfb.svg"
+                    alt="line3686"
+                    class="index-line"
+                  />
+                </div>
+                <div class="index-profile1">
+                  <span class="index-text16">
+                    <span>
+                      <span>名前 : 山地 由真(ヤマジ ユマ)</span>
+                      <br />
+                      <span>生年月日 : 2002年09月27日</span>
+                    </span>
+                  </span>
+                  <span class="index-text21">
+                    <span>
+                      <span>
+                        　Minecraft(マインクラフト)のゲーム実況を中心に動画編集を行っています。他にもMVやエンタメ系,ビジネス系,ショート動画,文字起こし,漫画系などのさまざまなジャンルの制作経験があります。
+                      </span>
+                      <br />
+                      <span>
+                        　サムネイル作成やイラスト作成、音源制作等も可能です。
+                      </span>
+                    </span>
+                  </span>
+                </div>
+              </div>
+              <div class="index-skill">
+                <div class="index-skill1">
+                  <span class="index-text26"><span>Skill</span></span>
+                  <div class="index-line1">
+                    <img
+                      src="public/playground_assets/lineblue3035-s028.svg"
+                      alt="lineblue3035"
+                      class="index-lineblue"
+                    />
+                    <img
+                      src="public/playground_assets/lineyellow3035-s2yu.svg"
+                      alt="lineyellow3035"
+                      class="index-lineyellow"
+                    />
+                  </div>
+                </div>
+                <div class="index-icon">
+                  <div class="index-icon01">
+                    <div class="index-ai">
+                      <img
+                        src="public/playground_assets/iconai3036-6k14-200h.png"
+                        alt="iconAi3036"
+                        class="index-icon-ai"
+                      />
+                      <span class="index-text28"><span>Illustrator</span></span>
+                    </div>
+                    <div class="index-ps">
+                      <img
+                        src="public/playground_assets/iconps3233-4jtce-200h.png"
+                        alt="iconPs3233"
+                        class="index-icon-ps"
+                      />
+                      <span class="index-text30"><span>Photoshop</span></span>
+                    </div>
+                    <div class="index-pr">
+                      <img
+                        src="public/playground_assets/iconpr3233-gx3n-200h.png"
+                        alt="iconPr3233"
+                        class="index-icon-pr"
+                      />
+                      <span class="index-text32"><span>Premire Pro</span></span>
+                    </div>
+                  </div>
+                  <div class="index-icon02">
+                    <div class="index-ae">
+                      <img
+                        src="public/playground_assets/iconae3233-ear-200h.png"
+                        alt="iconAe3233"
+                        class="index-icon-ae"
+                      />
+                      <span class="index-text34">
+                        <span>After Effect</span>
+                      </span>
+                    </div>
+                    <div class="index-garage-band">
+                      <img
+                        src="public/playground_assets/icongb3233-mfbg-200h.png"
+                        alt="iconGB3233"
+                        class="index-icon-gb"
+                      />
+                      <span class="index-text36"><span>Garage Band</span></span>
+                    </div>
+                    <div class="index-ibis-paint">
+                      <img
+                        src="public/playground_assets/iconibis3233-m9s-200h.png"
+                        alt="iconibis3233"
+                        class="index-iconibis"
+                      />
+                      <span class="index-text38">
+                        <span>Ibis Paint Ⅹ</span>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="index-works">
+            <div class="index-title2">
+              <span class="index-text40"><span>Works</span></span>
+              <span class="index-text42"><span>制作したもの</span></span>
+            </div>
+            <div class="index-samnail">
+              <div class="index-samnail01">
+                <a
+                  href="https://youtu.be/3KVQER3Acdg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="index-link"
+                >
+                  <img
+                    src="public/playground_assets/movie031390-50z9-200h.png"
+                    alt="movie031390"
+                    class="index-movie03"
+                  />
+                </a>
+                <a
+                  href="https://youtu.be/azlk6hCTHw8"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="index-link1"
+                >
+                  <img
+                    src="public/playground_assets/movie061391-33aq-200h.png"
+                    alt="movie061391"
+                    class="index-movie06"
+                  />
+                </a>
+              </div>
+              <div class="index-samnail02">
+                <img
+                  src="public/playground_assets/illustration011387-fhxe-200h.png"
+                  alt="illustration011387"
+                  class="index-illustration01"
+                />
+                <a
+                  href="https://youtu.be/D-fToqsW-C0"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="index-link2"
+                >
+                  <img
+                    src="public/playground_assets/music011388-nxuw-200h.png"
+                    alt="music011388"
+                    class="index-music01"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="index-more">
+              <span class="index-text44"><span>More</span></span>
+            </div>
+          </div>
+          <div class="index-contact">
+            <div class="index-title3">
+              <span class="index-text46"><span>Contact</span></span>
+              <span class="index-text48"><span>お問い合わせ</span></span>
+            </div>
+            <div class="index-form">
+              <div class="index-label">
+                <span class="index-text50"><span>氏名</span></span>
+                <div class="index-frame1">
+                  <span class="index-text52"><span>（必須）</span></span>
+                </div>
+              </div>
+              <div class="index-content">
+                <input type="text" placeholder="name" class="index-input" />
+              </div>
+            </div>
+            <div class="index-form1">
+              <div class="index-label1">
+                <span class="index-text54"><span>メールアドレス</span></span>
+                <div class="index-frame11">
+                  <span class="index-text56"><span>（必須）</span></span>
+                </div>
+              </div>
+              <div class="index-content1">
+                <input
+                  type="text"
+                  placeholder="mail@mail.com"
+                  class="index-input1"
+                />
+              </div>
+            </div>
+            <div class="index-form2">
+              <div class="index-label2">
+                <span class="index-text58"><span>メッセージ</span></span>
+                <div class="index-frame12">
+                  <span class="index-text60"><span>（必須）</span></span>
+                </div>
+              </div>
+              <div class="index-content2">
+                <input
+                  type="text"
+                  placeholder="メッセージ"
+                  class="index-input2"
+                />
+              </div>
+            </div>
+            <div class="index-send">
+              <span class="index-text62"><span>Send</span></span>
+            </div>
+          </div>
+          <div class="index-footer">
+            <div class="index-nav2">
+              <div class="index-nav3">
+                <span class="index-text64"><span>Top</span></span>
+                <span class="index-text66"><span>About</span></span>
+                <span class="index-text68"><span>Works</span></span>
+                <span class="index-text70"><span>Contact</span></span>
+              </div>
+              <span class="index-text72">
+                <span>Copyright © 2023 Yuma Yamaji.</span>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
