--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
               </li>
 
               <li class="skill-item">
-                <img src="img/skill_js.png" alt="JavaScript" />
+                <img src="img/skill_JS.png" alt="JavaScript" />
                 <div class="skill-ex">
                   <p class="skill-name">JavaScript</p>
                   <p>
