--- a/works-music.html
+++ b/works-music.html
@@ -59,7 +59,7 @@
           <ul class="works-list-block">
             <div class="flex-works-list">
               <li class="works-item-2">
-                <img class="works-img-2" src="img/music_01.JPG" />
+                <img class="works-img-2" src="img/music_01.jpg" />
                 <p class="works-name-2">YouTube公開楽曲</p>
                 <p class="works-lead-2">作編曲</p>
               </li>
