--- a/works-app.html
+++ b/works-app.html
@@ -96,11 +96,11 @@
         </a>
         <div class="md-inner">
           <img class="md-img" src="img/app_01.png" />
-          <p class="md-name">Sortly アプリ企画・Webサイト制作</p>
+          <p class="md-name">Sortly 企画・サイト制作</p>
           <ul class="md-list">
             <li class="md-day">2023/07</li>
-            <li class="md-sw">使用ソフト：figma(モックアップ・デモ)</li>
-            <li class="md-sw">使用言語：HTML、CSS、JavaScript(jQuery)</li>
+            <li class="md-sw">使用ソフト：figma(モックアップ)</li>
+            <li class="md-sw">使用言語：HTML、CSS、JavaScript(サイト制作)</li>
           </ul>
           <p class="md-point">
             <a
@@ -126,12 +126,12 @@
         </a>
         <div class="md-inner">
           <img class="md-img" src="img/app_02.png" />
-          <p class="md-name">アドリテ アプリ企画・Webサイト制作</p>
+          <p class="md-name">アドリテ 企画・サイト制作</p>
           <ul class="md-list">
             <li class="md-day">2023/12</li>
-            <li class="md-sw">使用ソフト：figma(モックアップ・デモ)</li>
+            <li class="md-sw">使用ソフト：figma(モックアップ)</li>
             <li class="md-sw">
-              使用言語：HTML、CSS、JavaScript(Webサイト制作)
+              使用言語：HTML、CSS、JavaScript(サイト制作)
             </li>
           </ul>
           <p class="md-point">
