--- a/works-illustration.html
+++ b/works-illustration.html
@@ -162,7 +162,7 @@
         </a>
         <div class="md-inner">
           <img class="md-img" src="img/illsutration_01.png" />
-          <p class="md-name">ドズル社コラボカフェ採用イラスト</p>
+          <p class="md-name">ドズル社コラボカフェイラスト</p>
           <ul class="md-list">
             <li class="md-day">2023/11/23~12/17</li>
             <li class="md-sw">使用ソフト：ibisPaint X</li>
@@ -200,7 +200,7 @@
         </a>
         <div class="md-inner">
           <img class="md-img" src="img/illsutration_02.png" />
-          <p class="md-name">ドズル社ランド2023冬採用イラスト</p>
+          <p class="md-name">ドズル社ランド2023冬イラスト</p>
           <ul class="md-list">
             <li class="md-day">2023/12/13~17</li>
             <li class="md-sw">使用ソフト：ibisPaint X</li>
@@ -222,7 +222,7 @@
         </a>
         <div class="md-inner">
           <img class="md-img" src="img/illustration_03.png" />
-          <p class="md-name">ねぇねぇねぇ。サンプルMVイラスト</p>
+          <p class="md-name">ねぇねぇねぇ。サンプルMV</p>
           <ul class="md-list">
             <li class="md-day">2022/11/20</li>
             <li class="md-sw">使用ソフト：ibisPaint X</li>
