--- a/works-app.html
+++ b/works-app.html
@@ -100,7 +100,7 @@
           <ul class="md-list">
             <li class="md-day">2023/07</li>
             <li class="md-sw">使用ソフト：figma(モックアップ)</li>
-            <li class="md-sw">使用言語：HTML、CSS、JavaScript(サイト制作)</li>
+            <li class="md-sw">使用言語：HTML, CSS, JavaScript</li>
           </ul>
           <p class="md-point">
             <a
@@ -131,7 +131,7 @@
             <li class="md-day">2023/12</li>
             <li class="md-sw">使用ソフト：figma(モックアップ)</li>
             <li class="md-sw">
-              使用言語：HTML、CSS、JavaScript(サイト制作)
+              使用言語：HTML, CSS, JavaScript
             </li>
           </ul>
           <p class="md-point">
