--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
               <li class="skill-item">
                 <img src="img/skill_MySQL.png" alt="MySQL" />
                 <div class="skill-ex">
-                  <p class="skill-name">MySQL</p>
+                  <p class="skill-name">SQL</p>
                   <p>
                     2023年9月～<br />
                     大学の授業で使用
@@ -152,16 +152,6 @@
                   </p>
                 </div>
               </li>
-              <li class="skill-item">
-                <img src="img/skill_Mineimator.png" alt="Mine-imator" />
-                <div class="skill-ex">
-                  <p class="skill-name">Mine-imator</p>
-                  <p>
-                    2023年5月～<br />
-                    趣味で動画制作
-                  </p>
-                </div>
-              </li>
 
               <li class="skill-item">
                 <img src="img/skill_ibisPaint.png" alt="ibisPaint X" />
@@ -183,16 +173,7 @@
                   </p>
                 </div>
               </li>
-              <li class="skill-item">
-                <img src="img/skill_blender.png" alt="blender" />
-                <div class="skill-ex">
-                  <p class="skill-name">blender</p>
-                  <p>
-                    2022年4月～<br />
-                    大学の授業で使用
-                  </p>
-                </div>
-              </li>
+          
             </div>
           </ul>
         </div>
